--- a/style/style.css
+++ b/style/style.css
@@ -44,3 +44,100 @@
                 text-align: center;
                 opacity: 0.6;
 }
+.second-btn{
+                text-align: center;
+                margin-top: 45px;
+                
+}
+.btn-2{
+             background-color: black; 
+             color: white;  
+             padding: 10px;
+             border-radius: 4px;
+             border: black;
+
+}
+/* main style start */
+
+.main{
+                
+                width: 1020px;
+                margin:0 auto;
+
+}
+.first-section{
+                    
+                background: rgba(13, 19, 33, 0.02);
+                border-radius: 4px;
+                padding: 60px;
+                
+}
+.first-section h1{
+
+                
+                color: rgb(13, 19, 33);     
+                font-size: 32px;
+                font-weight: 800;
+                line-height: 37px;
+                letter-spacing: 0%;
+                text-align: center;
+}
+.first-section p{
+                color:gray;
+                font-size: 12px;
+                font-weight: 400;
+                line-height: 26px;
+                letter-spacing: 0%;
+                text-align: center; 
+                margin-bottom: 78px;
+}
+
+.first-section-content{
+                width: 770px;
+                background-color: white;
+                align-items: center;
+                display: flex;
+                justify-content: space-between;
+                padding: 30px;
+                margin: auto;
+                border-radius: 4px;
+                margin-bottom: 60px;
+               
+}
+.content-one{
+                display: flex;
+                flex-direction: column;
+                align-items:flex-start;
+              
+                
+}
+.content-one h1{
+                color: rgba(13, 19, 33, 0.7);
+                font-size: 18px;
+                font-weight: 700;
+                line-height: 36px;
+                letter-spacing: 0%;
+                text-align: left;
+}
+.content-one p{
+                 color:gray;
+                 font-size: 12px;
+                 font-weight: 400;
+                 line-height: 26px;
+                 letter-spacing: 0%;
+                 text-align: left;
+                 margin-bottom: 10px;
+}
+.first-section-content-2{
+                width: 770px;
+                background-color: white;
+                align-items: center;
+                display: flex;
+                flex-direction: row-reverse;
+                justify-content: space-between;
+                padding: 30px;
+                margin: auto;
+                border-radius: 4px;
+                margin-bottom: 60px;
+               
+}
