--- a/style/style.css
+++ b/style/style.css
@@ -86,7 +86,7 @@
                 color:gray;
                 font-size: 12px;
                 font-weight: 400;
-                line-height: 26px;
+                line-height: 20px;
                 letter-spacing: 0%;
                 text-align: center; 
                 margin-bottom: 78px;
@@ -123,7 +123,7 @@
                  color:gray;
                  font-size: 12px;
                  font-weight: 400;
-                 line-height: 26px;
+                 line-height: 20px;
                  letter-spacing: 0%;
                  text-align: left;
                  margin-bottom: 10px;
@@ -153,7 +153,7 @@
                 color: rgb(13, 19, 33);
                 font-size: 32px;
                 font-weight: 800;
-                line-height: 37px;
+                line-height: 20px;
                 letter-spacing: 0%;
                 text-align: center;
 }
@@ -162,8 +162,167 @@
                 color:gray;
                 font-size: 12px;
                 font-weight: 400;
-                line-height: 26px;
+                line-height: 20px;
                 letter-spacing: 0%;
                 text-align: center;
                 margin-top: 20px;
+                margin-bottom: 40px;
+}
+.second-section-video{
+                margin: auto;
+                border-radius: 4px;
+
+}
+
+/* third section style */
+
+
+.third-section{
+                margin: auto;
+                
+}
+.third-section-content{
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                margin-top: 30px;
+}
+.third-section-content h1{
+                color: rgb(13, 19, 33);
+                font-size: 32px;
+                font-weight: 800;
+                line-height: 37px;
+                letter-spacing: 0%;
+                text-align: center;
+
+}
+.third-section-content p{
+                color: gray;
+                font-size: 12px;
+                font-weight: 400;
+                line-height: 20px;
+                letter-spacing: 0%;
+                text-align: center;
+                margin-top: 14px;
+                margin-bottom: 30px;
+}
+.third-section-main-content{
+                margin: auto;
+                display: flex;
+                flex-direction: row;
+                gap: 18px;
+                justify-content: space-between;
+}
+.third-section-content-1{
+                border: 1px solid rgb(255,246,244) ;
+                align-items: center;
+                padding: 30px;
+                background-color:rgb(255,246,244) ;
+                border-radius: 6px;
+}
+.third-section-content-2{
+                border: 1px solid rgb(242,246,254) ;
+                align-items: center;
+                padding: 30px;
+                background-color:rgb(242,246,254) ;
+                border-radius: 6px;
+}
+.third-section-content-3{
+                border: 1px solid rgb(255,253,242) ;
+                align-items: center;
+                padding: 30px;
+                background-color:rgb(255,253,242) ;
+                border-radius: 6px;
+}
+
+.third-section-content-1 h1{
+                color: rgb(13, 19, 33);
+                
+                font-size: 24px;
+                font-weight: 800;
+                line-height: 36px;
+                letter-spacing: 0%;
+                text-align: left;
+
+}
+.third-section-content-2 h1{
+                color: rgb(13, 19, 33);
+                
+                font-size: 24px;
+                font-weight: 800;
+                line-height: 36px;
+                letter-spacing: 0%;
+                text-align: left;
+
+}
+.third-section-content-3 h1{
+                color: rgb(13, 19, 33);
+                
+                font-size: 24px;
+                font-weight: 800;
+                line-height: 36px;
+                letter-spacing: 0%;
+                text-align: left;
+
+}
+.third-section-content-1 p{
+                color: rgb(13, 19, 33);
+               
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 20px;
+                letter-spacing: 0%;
+                text-align: left;
+                margin-bottom: 10px;
+}
+.third-section-content-2 p{
+                color: rgb(13, 19, 33);
+               
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 20px;
+                letter-spacing: 0%;
+                text-align: left;
+                margin-bottom: 10px;
+}
+.third-section-content-3 p{
+                color: rgb(13, 19, 33);
+               
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 20px;
+                letter-spacing: 0%;
+                text-align: left;
+                margin-bottom: 10px;
+}
+
+.third-section-content-1 h6{
+                color: rgb(13, 19, 33);
+                font-family: Azeret Mono;
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 19px;
+                letter-spacing: 0%;
+                text-align: left;
+                text-decoration-line: underline;
+}
+.third-section-content-2 h6{
+                color: rgb(13, 19, 33);
+                font-family: Azeret Mono;
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 19px;
+                letter-spacing: 0%;
+                text-align: left;
+                text-decoration-line: underline;
+}
+.third-section-content-3 h6{
+                color: rgb(13, 19, 33);
+                font-family: Azeret Mono;
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 19px;
+                letter-spacing: 0%;
+                text-align: left;
+                text-decoration-line: underline;
 }
