--- a/style/style.css
+++ b/style/style.css
@@ -308,7 +308,6 @@
 }
 .third-section-content-2 h6{
                 color: rgb(13, 19, 33);
-                font-family: Azeret Mono;
                 font-size: 16px;
                 font-weight: 700;
                 line-height: 19px;
@@ -318,11 +317,57 @@
 }
 .third-section-content-3 h6{
                 color: rgb(13, 19, 33);
-                font-family: Azeret Mono;
                 font-size: 16px;
                 font-weight: 700;
                 line-height: 19px;
                 letter-spacing: 0%;
                 text-align: left;
                 text-decoration-line: underline;
+}
+.fourth-section-main-content{
+                display: flex;
+                flex-direction: column;
+                gap: 32px;
+}
+.fourth-section-main-content-1{
+                display: flex;
+                border: 1px solid gray;
+                padding: 24px;
+                border-radius: 10px;
+}
+.third-section-content-10{
+
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+                padding: 16px;                           
+}
+.third-section-content-10 h1{
+                color: rgb(13, 19, 33);
+                font-size: 24px;
+                font-weight: 800;
+                line-height: 36px;
+                letter-spacing: 0%;
+                text-align: left;
+}
+.third-section-content-10 p{
+                color: rgb(13, 19, 33);     
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 24px;
+                letter-spacing: 0%;
+                text-align: left;
+}
+.third-section-content-10 h6{
+                color: rgb(13, 19, 33);
+                font-size: 16px;
+                font-weight: 600;
+                line-height: 18px;
+                letter-spacing: 0%;
+                text-align: left;
+                text-decoration-line: underline;
+}
+.fourth-section-main-content img{
+                height:30% ;
+                width: 30%;
 }
