--- a/style/style.css
+++ b/style/style.css
@@ -328,6 +328,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 32px;
+                margin-bottom: 80px;
 }
 .fourth-section-main-content-1{
                 display: flex;
@@ -370,4 +371,62 @@
 .fourth-section-main-content img{
                 height:30% ;
                 width: 30%;
+}
+
+
+
+.fifth-section{
+                margin: auto;
+                background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), 
+                url(../B10A1-Challenge-Begins/assets/handshake.jpg);
+                background-position:center;
+                background-size: cover;
+                border-radius: 6px;
+                height: 320px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 20px;
+}
+
+.fifth-section h1{
+                color: rgb(255, 255, 255);
+                font-size: 32px;
+                font-weight: 700;
+                line-height: 36px;
+                letter-spacing: 0%;
+                text-align: center;
+}
+.fifth-section p{
+                color:lightgray;   
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 26px;
+                letter-spacing: 0%;
+                text-align: center;
+}
+.submit{
+                box-sizing: border-box;
+                display: flex;
+                gap: 20px;
+                justify-content: center;
+}
+
+.btn-3{
+
+                font-size: 18px;
+                padding: 10px 16px;
+                border-radius: 6px;
+                border: 1px solid white;
+                font-weight: 500;
+                
+
+}
+.submit input{
+                border-radius: 6px;
+                border: 1px solid white;
+                font-weight: 500;
+                padding: 14px;
+                width: 350px;
+
 }
